--- a/src/components/nav/nav.module.css
+++ b/src/components/nav/nav.module.css
@@ -1,6 +1,6 @@
 .header {
-  width: 500px;
-  max-width: 95%;
+  width: 500px !important;
+  max-width: 95% !important;
   height: 96vh;
   background: #333;
   border-bottom-left-radius: 15px;
@@ -45,7 +45,7 @@
   display: none;
 }
 /* start media */
-@media (max-width: 700px) {
+@media (max-width: 800px) {
   .header .icon {
     display: block;
     display: flex;
