--- a/src/pages/all orders/order details/details.module.css
+++ b/src/pages/all orders/order details/details.module.css
@@ -7,12 +7,13 @@
   flex-wrap: wrap;
   gap: 30px;
   width: 100%;
+  padding: 0 10px;
 }
 .section .content form .input_container {
   display: flex;
   flex-direction: column;
   gap: 5px;
-  width: 380px;
+  width: 370px;
   max-width: 95%;
 }
 .section .content form .input_container label {
