--- a/src/pages/apply for a job/Job.module.css
+++ b/src/pages/apply for a job/Job.module.css
@@ -36,7 +36,18 @@
   outline: none;
   border: none;
   padding-left: 20px;
-  font-size: 18px;
+  font-size: 16px;
+  height: 40px;
+  background: var(--btn-bg);
+  border-radius: 5px;
+  color: var(--text-color);
+}
+.section .container form .container .input_container select {
+  width: 100%;
+  outline: none;
+  border: none;
+  padding-left: 10px;
+  font-size: 16px;
   height: 40px;
   background: var(--btn-bg);
   border-radius: 5px;
