--- a/src/pages/all orders/orders/orders.module.css
+++ b/src/pages/all orders/orders/orders.module.css
@@ -76,7 +76,8 @@
 }
 .section .content {
   flex-direction: column;
-padding-top: 30px;
+  justify-content: space-between;
+  padding-top: 30px;
   width: 100%;
   gap: 20px;
 }
@@ -99,9 +100,14 @@ padding-top: 30px;
 .section .content .content_container {
   flex-wrap: wrap;
   gap: 15px;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex: 1;
+  width: 100%;
+  padding: 0 20px;
   overflow: scroll;
 }
-.section .content .content_container::-webkit-scrollbar{
+.section .content .content_container::-webkit-scrollbar {
   width: 0;
 }
 .section .content .content_container .box {
@@ -123,4 +129,9 @@ padding-top: 30px;
   font-size: 50px;
 }
 .section .content .content_container .box h3 {
+}
+@media (max-width: 1177px) {
+  .section .content .content_container {
+    justify-content: center;
+  }
 }
