--- a/src/index.css
+++ b/src/index.css
@@ -73,7 +73,10 @@ button {
   right: 0 !important;
   z-index: 100;
 }
-
+.delete {
+  color: whitesmoke;
+  background: rgb(176, 5, 5) !important;
+}
 /* media for nav */
 @media (max-width: 800px) {
   .menu_icon {
