--- a/src/pages/Employees/work hostory/history.module.css
+++ b/src/pages/Employees/work hostory/history.module.css
@@ -1,15 +1,17 @@
 .section {
+
 }
 .section main {
   width: 100%;
   flex-direction: column;
   gap: 50px;
-  padding-bottom: 25px;
+
 }
 .main .input_container {
   margin-top: 30px;
   width: 500px;
   max-width: 90%;
+  padding: 35px 0 0 0;
 }
 .main .input_container input {
   width: 400px;
@@ -26,6 +28,7 @@ main .content{
     width: 100%;
 flex-direction: column;
 gap: 10px;
+padding: 15px 0;
 }
 main .content .box{
 background: var(--btn-bg);
